2014-06-04  Sergio Martin <sergio.martin@artica.es>

	* include/help/es/help_plugin_macros.php
	include/help/es/help_alert_macros.php
	include/help/en/help_plugin_macros.php
	include/help/en/help_alert_macros.php: Added missed and
	new macros to help

2014-06-04  Sergio Martin <sergio.martin@artica.es>

	* include/constants.php
	include/functions_graph.php
	include/functions_reporting.php
	include/graphs/functions_pchart.php
	include/graphs/functions_flot.php
	include/functions.php
	include/functions_events.php: Fix a lot of errors
	on events items on reports using now the same query 
	as events view, etc.

	* include/styles/pandora.css: Little aesthetic
	improvement in focus buttons and unset webfont

2014-06-04  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/mergely/*: added mergely javascript library.

2014-06-04  Sancho Lerena <slerena@artica.es>

	* images/backgrounds/flowers.jpg,
	images/backgrounds/grass.jpg,
	images/backgrounds/wood.jpg: Compressed backgrounds.

2014-06-04  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/agentes/planned_downtime.editor.php: Check
	creation date in scheduled downtime.

2014-06-04  Sergio Martin <sergio.martin@artica.es>

	* extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql: Added missed 
	field ff_timeout to tagente_modulo in migration scripts

2014-06-03  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	images/login_background.png
	general/login_page.php: Change the whole
	login screen to new style

	* fonts
	fonts/nunito.woff: Added a web font

	* include/functions_events.php
	include/functions_reporting.php: Fix a bug in the
	agent events item on reports to reutilize the 
	standard code

2014-06-03  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_groups.php: Fixed problem
	with ACLs in group  view.

2014-06-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
	