@@ -1,3 +1,9 @@
+2014-06-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* godmode/setup/setup_general.php: Disable the "Enable
+	Netflow" radio buttons if the server is installed on a
+	Windows machine.
+
 2014-06-04  Sergio Martin <sergio.martin@artica.es>
 
 	* include/help/es/help_plugin_macros.php
